<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_user_login"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.zdm.net_disk_app_21.fragment.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_updateAccountFragment"
            app:destination="@id/updateAccountFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.zdm.net_disk_app_21.fragment.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateAccountFragment"
        android:name="com.zdm.net_disk_app_21.fragment.UpdateAccountFragment"
        android:label="@string/title_update_account"
        tools:layout="@layout/fragment_update_account">
        <action
            android:id="@+id/action_updateAccountFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>